data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1584.wast
;; 5. **Test Description**:     - Utilize a `br_if` within a loop that pushes multiple operands and then evaluates a condition much later, ensuring it processes according to label results.    - **Constraint Checking**: Verifies sequence preservation and correct stack management over complex operand manipulations.    - **Infinite Loop Relation**: Ensures that complex operands do not lead to infinite looping due to mismanagement in `wizard_engine`'s label argument differentiation.

(assert_invalid
  (module
    (func $complex-loop-br_if
      (loop (i32.add (i32.const 1) (i32.const 2))
           (block (br_if 0 (i32.const 1)) (i32.const 0))
      )
    )
  )
  "type mismatch"
)